declaracion de variables

--- a/index.css
+++ b/index.css
@@ -1,2 +1,11 @@
 /* importacion de la fuente de google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+/* declaracion de variables para estilos predefinidos en css */
+:root {
+    --primary-color: #5c48ee;
+    --primary-color-dark: #0f1e6a;
+    --secondary-color: #f9fafe;
+    --text-color: #333333;
+    --white: #ffffff;
+    --max-width: 1200px;
+  }
