--- a/index.css
+++ b/index.css
@@ -9,3 +9,12 @@
     --white: #ffffff;
     --max-width: 1200px;
   }
+
+  /* estilos generales de la pagina */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+  
