--- a/index.css
+++ b/index.css
@@ -23,4 +23,60 @@ body {
     background-color: var(--secondary-color);
   }
 
+  /* estilos de la barra de navegacion */
+nav {
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
   
+  .nav__logo a {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--primary-color);
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  
+  .nav__links {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .link a {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--text-color);
+    text-decoration: none;
+    transition: 0.3s;
+  }.link a:hover {
+      color: var(--primary-color);
+    }
+    .btn{
+      background-color: #7d2ae8;
+      border: 2px solid #fff;
+      outline: none;
+      border-radius: 8px;
+      box-shadow: 0 0 10px #7d2ae8;
+      color: #fff;
+      letter-spacing: 1px;
+      cursor: pointer;
+    }
+    .link .nav__btn {
+      padding: 0.5rem 2rem;
+      color: var(--white) !important;
+      background-color: #5c48ee;
+      border-radius: 5px;
+    }
+    
+    .link .nav__btn:hover {
+      background-color: var(--primary-color-dark);
+    }
+    
