--- a/index.css
+++ b/index.css
@@ -79,4 +79,75 @@ nav {
     .link .nav__btn:hover {
       background-color: var(--primary-color-dark);
     }
-    
+    /* estilos del contenedor principal */
+  .container {
+    max-width: var(--max-width);
+    margin: auto;
+    padding: 1rem;
+    min-height: calc(100vh - 100px);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+  }
+  
+  .content__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .content__container h1 {
+    font-size: 3rem;
+    font-weight: 400;
+    line-height: 3.5rem;
+    color: var(--primary-color-dark);
+    margin-bottom: 1rem;
+  }
+  
+  .heading__1 {
+    font-weight: 700;
+  }
+  
+  .heading__2 {
+    font-weight: 700;
+    color: var(--primary-color);
+  }
+  
+  .content__container p {
+    font-size: 1rem;
+    color: var(--text-color);
+    margin-bottom: 2rem;
+  }
+  
+  .content__container form {
+    display: flex;
+    align-items: center;
+  }
+  
+  .content__container input {
+    width: 100%;
+    max-width: 300px;
+    padding: 1rem;
+    font-size: 0.8rem;
+    outline: none;
+    border: none;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+  }
+  .content__container button {
+    width: fit-content;
+    padding: 1rem;
+    font-size: 0.8rem;
+    white-space: nowrap;
+    background-color: var(--primary-color);
+    color: var(--white);
+    outline: none;
+    border: none;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  
+  .content__container button:hover {
+    background-color: var(--primary-color-dark);
+  }
+  
