--- a/index.css
+++ b/index.css
@@ -194,3 +194,32 @@ nav {
   .image__content li {
     margin-bottom: 0.5rem;
   }
+
+  /* RESSPONSIVE */
+
+  @media (width < 900px) {
+    .link a:not(.nav__btn) {
+      display: none;
+    }
+  
+    .container {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  
+    .content__container {
+      text-align: center;
+    }
+  
+    .content__container form {
+      margin-right: auto;
+      margin-left: auto;
+    }
+  
+    .image__container {
+      grid-area: 1/1/2/2;
+    }
+  
+    .image__container img {
+      transform: translateY(0) !important;
+    }
+  }
